Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22833

Fix expected fails in QDateTime autotest

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 5.10
    • 5.0.0
    • Core: Date/Time
    • None
    • 68f19fb630dc02463c2d61fc511de7407687795e

      In qtbase?tests/auto/corelib/tools/qdatetime/tst_qdatetime.cpp, the fromStringToStringLocale() test function has two expected fails:

      QEXPECT_FAIL("data0", "This format is apparently failing because of a bug in the datetime parser. (QTBUG-22833)", Continue);
      QCOMPARE(QDateTime::fromString(dateTime.toString(Qt::DefaultLocaleLongDate), Qt::DefaultLocaleLongDate), dateTime);
      QEXPECT_FAIL("data0", "This format is apparently failing because of a bug in the datetime parser. (QTBUG-22833)", Continue);
      QCOMPARE(QDateTime::fromString(dateTime.toString(Qt::SystemLocaleLongDate), Qt::SystemLocaleLongDate), dateTime);
      

      These were previously just commented out, so I removed them with 223ed436b58c13843b87ac28be2659ca73ec1272. They should be investigated properly, so I've replaced them with expected fails: https://codereview.qt-project.org/#change,35242

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Eddy Edward Welbourne
            jasmcdon Jason McDonald (Closed Nokia Identity. Please assign to "macadder" instead) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes